Fix overflow issue on mobile product detail page

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -26,7 +26,7 @@
 
   @media screen and (max-width: $break-medium)
     row-gap: 24px
-    grid-template-columns: 1fr
+    grid-template-columns: minmax(0, 1fr)
 
 .reset-selection-button-container
   text-align: center
